2003-09-15  Mark Mitchell  <mark@codesourcery.com>

	* qm/extension.py (make_dom_document): Simplify.
	* qm/user.py (XmlDatabase.Write): Likewise.
	* qm/xmlutil.py (make_system_id): Use CodeSourcery URLs.
	(make_public_id): New function.
	(create_dom_document): Compute full system and public identifiers
	here.
	* qm/test/base.py (dtds): Remove.
	* qm/test/cmdline.py (QMTest.__ExecuteCreateTarget): Adjust call
	to create_dom_document.
	(QMTest.__ExecuteRegister): Likewise.
	* qm/test/classes/xml_database.py: Likewise.
	* qm/test/classes/xml_result_stream.py: Likewise.
	

2003-09-14  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (TimeoutExecutable.__init__): Ignore timeouts
	under Windows.  Accept any representation of "timeout" that can be
	converted to a float.
	(__all__): Define.
	* qm/test/cmdline.py (QMTest.__init__): Improve documentation.

2003-09-12  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (Executable._MakeCloseOnExec): Deal with
	missing fcntl.FD_CLOEXEC.

2003-09-09  Stefan Seefeld  <seefeld@sympatico.ca>

	* setup.py: Factor out commands into ...
	* qmdist/command/build_doc.py: ...this
	* qmdist/command/install_data.py: ...and this.
	* qmdist/__init__.py: New file.
	* qmdist/command/__init__.py: New file.
        * MANIFEST.in: Provide file list for source distribution.
	
2003-09-07  Mark Mitchell  <mark@codesourcery.com>

	* qm/fields.py (cStringIO): Do not import.
	(StringIO): Import.
	(tokenize): Import.
	(Field.FormatValueAsText): Use StringIO.
	(Field.ParseTextValue): Improve documentation.
	(SetField.FormatValueAsText): Make output match format expected 
	by ...
	(SetField.ParseTextField): ... this new method.
	* qm/test/cmdline.py (QMTest.attribute_option_spec): Generalize
	help text.
	* share/diagnostics/common.txt (invalid set value): New message.

	* NEWS: Mention correction of critical resource defect.

2003-09-05  Mark Mitchell  <mark@codesourcery.com>
