@@ -33,14 +33,9 @@ class install_data(base.install_data):
         outf = open(config, "w")
         outf.write("#the old way...\n")
         outf.write("import os\n")
-        outf.write("os.environ['QM_HOME']='%s'\n"%(id.install_dir))
         outf.write("os.environ['QM_BUILD']='0'\n")
         outf.write("#the new way...\n")
         outf.write("version='%s'\n"%(self.distribution.get_version()))
         
-        outf.write("class config:\n")
-        outf.write("  data_dir='%s'\n"%(os.path.join(id.install_dir,
-                                                     'share',
-                                                     'qm')))
         outf.write("\n")
         self.outfiles.append(config)
